# RS2

./: .gitignore  Bottle box_no mount.STL  README.md
bottle_cap_vision/: CMakeLists.txt  README.md
bottle_cap_vision/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bottle_cap_vision/install/bottle_cap_vision/lib/bottle_cap_vision/: bottle_cap_vision_node  cap_dot_representation  hsv_click_detector  image_saver_node  live_bottle_cap_vision_node  realsense_capture_node
bottle_cap_vision/install/bottle_cap_vision/share/ament_index/resource_index/parent_prefix_path/: bottle_cap_vision
bottle_cap_vision/install/bottle_cap_vision/share/bottle_cap_vision/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bottle_cap_vision/log/: latest_build
bottle_cap_vision/src/: cap_centroid_detector.cpp  cap_dot_representation.cpp  hsv_click_detector.cpp  image_saver_node.cpp  realsense_capture_node.cpp  test_roi.cpp
bottle_sorter/: CMakeLists.txt
bottle_sorter/launch/: bottle_sorter.launch.py
bottle_sorter/src/: main.cpp  ur3_movement.cpp
dashboard/: .gitignore  CMakeLists.txt  package.xml
dashboard/src/: talker_test.py  web_data.py
dashboard/src/templates/: fetch.html  fetch1.html  login.html  login1.html  state.html
path_planning/: CMakeLists.txt  package.xml
path_planning/include/urdf/: ur.urdf.xacro  ur_macro.xacro
path_planning/launch/: bottle_sorter.launch.py  ur3_visualisation.rviz  ur_moveit.launch.py
path_planning/src/: bottle_seq_helper.cpp  main.cpp  path_planning.cpp  servo_control.cpp
servo_controller/: CMakeLists.txt  package.xml
servo_controller/src/: servo_reset_node.cpp  servo_serial_node.cpp  servo_test_node.cpp
