<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dashboard</name>
  <version>0.0.0</version>
  <description>The dashboard package</description>
  <maintainer email="jonathan.harris@student.uts.edu.au">Jonathan Harris</maintainer>
  <license>TODO</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- For services/messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export build information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>