<?xml version="1.0"?>
<package format="3">
  <name>bottle_cap_vision</name>
  <version>0.0.1</version>
  <description>A package for bottle cap vision processing using ROS 2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>opencv4</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
